<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY app_name "WhatsWeb">]>
<resources>
    <string name="app_name">&app_name;</string>

    <string name="status_saver">Whats Saver</string>

    <string name="menu_logout">Logout</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_useragent">UserAgent</string>
    <string name="menu_fullscreen">FullScreen</string>
    <string name="menu_language">Language</string>
    <string name="menu_privacypolicy">Privacy Policy</string>
    <string name="menu_about">About</string>
    <string name="menu_toggle_keyboard">Toggle keyboard locked</string>

    <string name="msg_keyboard_locked">Keyboard locked</string>
    <string name="msg_keyboard_unlocked">Keyboard unlocked</string>

    <string name="settings">Settings</string>
    <string name="currentversion">Current Version</string>

    <string name="introduction">Thanks for installing !\n\n Just scan this QR code with your WhatsApp for you to login.</string>
    <string name="about">&app_name;\n\n%1$s\n\nWhatsWeb is a free tool. It helps users to login two WA accounts on one device the same time.\n\nThis app is not affiliated with WhatsApp Inc. The rights for WhatsApp and WhatsApp Web belong to WhatsApp Inc. This app is a project to enable the use of WhatsApp Web on Mobile Devices.</string>
    <string name="home_about">&app_name;\n\n%1$s\n\nWhatsWeb is a free tool. It helps users to login two WA accounts on one device the same time.</string>

    <string name="useragent_select">Select the browser you\'d like to show in WA</string>
    <string name="useragent_title">Select browser shown in WA</string>

    <string name="language_en">English</string>
    <string name="language_es">Spanish</string>
    <string name="language_pt">Portugese</string>
    <string name="language_id">Indonesia</string>

    <string name="exit">Exit</string>
    <string name="exit_fullscreen">Exit Full Screen</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_exit_app">Are you sure to exit &app_name; ?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>

    <string name="tips">Tips</string>
    <string name="rewardad_unlock_info">Watch ads to unlock advanced features</string>
    <string name="rewardad_unlock_app">Watch ads to unlock app</string>

    <string name="wooops">Wooops!!</string>
    <string name="network_reconnect_info">Internet connection failed, please reconnect and try again!</string>
    <string name="network_refresh_info">Internet Connection failed, please hold and pull down your screen to refresh!</string>

    <string name="tab_status">STATUS</string>
    <string name="tab_downloaded">DOWNLOADED</string>

    <string name="dialog_delete_title">"Sure to delete the message?"</string>
    <string name="delete_it">"Delete it"</string>
    <string name="give_permission">"Give Permission"</string>
    <string name="need_permission_to_work">"We need Storage Permission to get &app_name;
        works"</string>

    <string name="send">"Send"</string>
    <string name="share">"Share"</string>
    <string name="download">"Download"</string>
    <string name="delete">"Delete"</string>

    <string name="msg_download_success">Downloaded</string>
    <string name="msg_download_fail">Downloaded Fail</string>

    <!-- fragment_status_page_empty_status.xml -->
    <string name="message_hint_empty_1">"Open WA"</string>
    <string name="message_hint_empty_2">"View the message of your friends"</string>
    <string name="message_hint_empty_3">"Open this app again"</string>
    <string name="message_hint_empty_4">"You will find message HERE!!"</string>
    <string name="message_hint_empty_downloaded">"The message files will show up here after you download it."</string>

    <!-- Update -->
    <string name="restart_to_update">Restart to update</string>
    <string name="update_downloaded">An update has just been downloaded.</string>
</resources>


