<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qltech.messagesaver.ui.message.detail.MessageDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <!--        <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/tool_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:layout_constraintTop_toTopOf="parent" />-->

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.WhatsWeb.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:popupTheme="@style/Theme.WhatsWeb.PopupOverlay"
                app:titleTextAppearance="@style/toolbar_titletextappearance" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/message_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar" />

        <ImageButton
            android:id="@+id/play_btn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_vedio_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/seek_bar_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_a_50"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/margin_m2"
            android:paddingEnd="@dimen/margin_m2"
            app:layout_constraintBottom_toTopOf="@+id/bottom_bar">

            <TextView
                android:id="@+id/video_time_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/sub" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/video_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/margin_m2"
                android:paddingBottom="@dimen/margin_m2" />

            <TextView
                android:id="@+id/video_time_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/sub" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_bar"
            style="@style/Widget.MessageSaver.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/control_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_send"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawablePadding="4dp"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/margin_m2"
                    android:text="@string/send"
                    android:textColor="@color/tab_selected"
                    app:drawableTint="@color/tab_selected"
                    app:drawableTopCompat="@mipmap/ic_bar_send" />

                <TextView
                    android:id="@+id/text_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawablePadding="4dp"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/margin_m2"
                    android:text="@string/share"
                    android:textColor="@color/tab_selected"
                    app:drawableTint="@color/tab_selected"
                    app:drawableTopCompat="@mipmap/ic_bar_share" />

                <TextView
                    android:id="@+id/text_download"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawablePadding="4dp"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/margin_m2"
                    android:text="@string/download"
                    android:textColor="@color/tab_selected"
                    app:drawableTint="@color/tab_selected"
                    app:drawableTopCompat="@mipmap/ic_bar_download" />

                <TextView
                    android:id="@+id/text_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawablePadding="4dp"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/margin_m2"
                    android:text="@string/delete"
                    android:textColor="@color/tab_selected"
                    app:drawableTint="@color/tab_selected"
                    app:drawableTopCompat="@mipmap/ic_bar_delete" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/banner_ad_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_video_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>